--- a/style-calendario.css
+++ b/style-calendario.css
@@ -169,7 +169,7 @@ dl, ol, ul {margin-top: 0; margin-bottom: .1rem;}
     margin-top: -5px;
 }
 .bs-callout-primary {
-    border-left-color: #444444;
+    border-left-color: #346EA8;
 }
 .bs-callout-primary h4 {
     color: #444444;
